redisinsight/redisinsight-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: redisinsight.talos3.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight-service
                port:
                  number: 80
